# afc

./: .gitignore  CMakeLists.txt  README.md  afc.1  afc.cpp
.github/workflows/: test.yml  test_compile.yml
tests/: CMakeLists.txt  gen_correct_crc_file.sh
